welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:23: error: not found: value faireV
	faireV();
        ^